--- a/app/src/main/res/layout/fragment_my_pokemons.xml
+++ b/app/src/main/res/layout/fragment_my_pokemons.xml
@@ -10,6 +10,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:textSize="24sp"
-        android:text="Mis Pokemons Fragment"/>
+        android:text="Mis Pokemon Fragment"/>
 
 </FrameLayout>
