--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.Tarea_03BLL" parent="Base.Theme.Tarea_03BLL" />
+
+    <style name="FirebaseUIAuthTheme" parent="FirebaseUI">
+        <item name="colorPrimary">@color/pokemon_amarillo</item>
+        <item name="colorPrimaryDark">@color/pokemon_rojo</item>
+        <item name="colorAccent">@color/pokemon_azul</item>
+        <item name="android:windowBackground">@color/pokemon_blanco</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
