--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,6 +29,13 @@
         android:layout_height="wrap_content"
         android:text="Iniciar sesión" />
 
+    <Button
+        android:id="@+id/buttonLoginGoogle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Iniciar sesión con Google"
+        android:layout_marginTop="16dp" />
+
     <TextView
         android:id="@+id/textViewRegister"
         android:layout_width="wrap_content"
