--- a/app/src/main/res/layout/fragment_my_pokemons.xml
+++ b/app/src/main/res/layout/fragment_my_pokemons.xml
@@ -6,7 +6,10 @@
     tools:context=".MyPokemonsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/recycler_view_pokemons"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        tools:context=".MyPokemonsFragment" />
 </FrameLayout>
