--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -1,61 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    android:orientation="horizontal"
+    android:padding="8dp"
+    android:background="@android:color/white"
+    android:layout_marginBottom="4dp">
+
+    <ImageView
+        android:id="@+id/pokemon_image"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="HOla" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_view_pokemon_name"
-            android:layout_width="match_parent"
+            android:id="@+id/pokemon_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/pokemon_gris_oscuro"/>
-
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/text_view_pokemon_indice"
-            android:layout_width="match_parent"
+            android:id="@+id/pokemon_details"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:textColor="@color/black"/>
-
-        <ImageView
-            android:id="@+id/image_view_pokemon"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center"/>
-
-
-        <TextView
-            android:id="@+id/text_view_pokemon_tipos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@color/black"/>
-        <TextView
-            android:id="@+id/text_view_pokemon_peso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@color/black"/>
-        <TextView
-            android:id="@+id/text_view_pokemon_altura"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@color/black"/>
-
+            android:textColor="@android:color/darker_gray" />
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
