--- a/app/src/main/res/layout/fragment_my_pokemons.xml
+++ b/app/src/main/res/layout/fragment_my_pokemons.xml
@@ -1,15 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyPokemonsFragment">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <androidx.recyclerview.widget.RecyclerView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/recycler_view_pokemons"
+        android:id="@+id/recycler_view_my_pokemons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MyPokemonsFragment" />
-</FrameLayout>
+        android:clipToPadding="false" />
+</LinearLayout>
