Implementada funcionalidad 'Acerca de' en ajustes con versión manual y ajustes en diseño

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,15 +1,37 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsFragment">
+    android:orientation="vertical"
+    android:padding="16dp">
 
+    <!-- Switch para Swipe to Delete -->
+    <Switch
+        android:id="@+id/switch_swipe_to_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Habilitar eliminación deslizando"
+        android:checked="true"
+        android:layout_marginBottom="24dp" />
+
+    <!-- Botón de Acerca de -->
+    <Button
+        android:id="@+id/button_about"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Acerca de"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/design_default_color_secondary"
+        android:textColor="@android:color/white" />
+
+    <!-- Botón de Cerrar Sesión -->
     <Button
         android:id="@+id/buttonLogout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cerrar Sesión"
-        android:layout_gravity="center"/>
+        android:text="Cerrar sesión"
+        android:backgroundTint="@color/design_default_color_secondary"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="16dp" />
 
-</FrameLayout>
+</LinearLayout>
