--- a/app/src/main/res/layout/dialog_pokemon_details.xml
+++ b/app/src/main/res/layout/dialog_pokemon_details.xml
@@ -3,15 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:gravity="center_horizontal">
 
+    <!-- Imagen del Pokémon -->
     <ImageView
         android:id="@+id/pokemon_image"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:contentDescription="@string/pokemon_image" />
+        android:contentDescription="@string/pokemon_image"
+        android:layout_gravity="center" />
 
+    <!-- Nombre del Pokémon -->
     <TextView
         android:id="@+id/pokemon_name"
         android:layout_width="match_parent"
@@ -19,14 +22,16 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textColor="@color/pokemon_azul" />
 
+    <!-- Detalles del Pokémon -->
     <TextView
         android:id="@+id/pokemon_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:layout_marginTop="8dp" />
-
+        android:layout_marginTop="8dp"
+        android:lineSpacingExtra="4dp"
+        android:textColor="@color/pokemon_gris_oscuro" />
 </LinearLayout>
-
