--- a/app/src/main/res/layout/fragment_my_pokemons.xml
+++ b/app/src/main/res/layout/fragment_my_pokemons.xml
@@ -5,9 +5,11 @@
     android:orientation="vertical"
     android:padding="8dp">
 
+    <!-- RecyclerView para mostrar la lista de Pokémon capturados -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_my_pokemons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false" />
+        android:clipToPadding="false"
+        android:contentDescription="@string/recycler_view_my_pokemons_desc" />
 </LinearLayout>
