--- a/app/src/main/res/layout/fragment_pokedex.xml
+++ b/app/src/main/res/layout/fragment_pokedex.xml
@@ -6,9 +6,11 @@
     android:orientation="vertical"
     android:padding="8dp">
 
+    <!-- RecyclerView para mostrar la lista de Pokémon de la Pokédex -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_pokedex"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false" />
+        android:clipToPadding="false"
+        android:contentDescription="@string/recycler_view_pokedex_desc" />
 </LinearLayout>
