--- a/app/src/main/res/layout/fragment_my_pokemons.xml
+++ b/app/src/main/res/layout/fragment_my_pokemons.xml
@@ -1,15 +1,16 @@
-<LinearLayout
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh_layout_my_pokemons"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_height="match_parent">
 
-    <!-- RecyclerView para mostrar la lista de Pokémon capturados -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_my_pokemons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:contentDescription="@string/recycler_view_my_pokemons_desc" />
-</LinearLayout>
+        android:contentDescription="@string/recycler_view_my_pokemons_desc"
+        android:padding="8dp" />
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
